# enterprise-ax-agent-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py
apps/api/adapters/: webhook_http.py
apps/api/application/: answering.py  chunking.py  migrations.py  ontology.py  ports.py  query_classifier.py  retrieval_strategy.py  use_cases.py  webhooks.py
apps/api/core/: __init__.py  config.py  container.py  errors.py  idempotency.py  observability.py  security.py
apps/api/domain/: models.py  policies.py
apps/api/routers/: agents.py  approvals.py  audit.py  dashboard.py  documents.py  evaluations.py  health.py  mcp.py  ontology.py  operations.py  scenarios.py  tools.py  webhooks.py
apps/api/schemas/: agents.py  approvals.py  common.py  documents.py  (+8 more)
data/evaluation/: regression_ko.json
data/sample_docs/: agentic-rag-operating-model.md  ax-governance-playbook.md  backend-reliability-for-llmops.md  mcp-enterprise-integration.md
db/migrations/: 001_initial_schema.sql  002_tenant_rls.sql  003_agent_scenario_runs.sql
docs/: API_DESIGN.md  ARCHITECTURE.md  COMPANY_FIT.md  DATABASE_DESIGN.md  DESIGN_PATTERNS.md  PRODUCT_STRATEGY.md
docs/adr/: 0001-use-hexagonal-architecture.md
docs/diagrams/: agent-run-sequence.mmd  system-context.mmd
scripts/: dispatch_webhooks.py  manage_migrations.py  run_demo_flow.py  run_regression_eval.py  seed_sample_docs.py  verify_tenant_rls.py
tests/: test_agent_use_case.py  test_api.py  test_demo_flow_script.py
(+14 files in other folders)
