[project]
name = "enterprise-ax-agent-platform"
version = "0.1.0"
description = "FastAPI 기반 기업형 AX Agent 운영 플랫폼."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Hoonapps" }
]
keywords = [
  "agentic-ai",
  "ax",
  "fastapi",
  "langgraph",
  "rag",
  "mcp",
  "llmops",
  "portfolio"
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.60",
  "langchain-core>=0.3.30",
  "qdrant-client>=1.12.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.2"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.urls]
Homepage = "https://hoonapps.github.io/"
Repository = "https://github.com/hoonapps/enterprise-ax-agent-platform"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*"]
exclude = ["data*", "db*", "docs*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
